Changes for 1.0.1.2
* Fix bug [ 1668008 ] Fighter ability to move one space to land when CV is sunk (ComradeKev)

* Fix territory connections in Pacific (ComradeKev)

* Fix bug [ 1809209 ] transport retreat/die after unload leaves unloaded units in place (ComradeKev)

* Change BattleStepStrings names to match text for clarity (ComradeKev)

* fix null pointer that leads to potential lobby crash (sgb)

* update great war map (Jason Clark)

Changes for 1.0.1.1

* Replace code for using the Large flags for Capital markers and tweak their placements in Pacific (ComradeKev)

* Fix abend when capturing Commonwealth Convoy Center (player with no capital) (ComradeKev)

* allow lobby server to run in headless mode  (sgb)

* fix lobby.properties. If a lobby.properties file is in the root TripleA directory, use that to connect to the lobby (sgb)

* reduce lobby backup frequency to 7 days (sgb) 

Changes for 1.0.1.0

* Fix bug [ 1830015 ] transport load/unload after being in combat (ComradeKev)

* Add Convoy Centers & Convoy Routes, as well as labels (ComradeKev)

* Add Tokyo Express - Ability for DDs to carry one inf in Pacific (ComradeKev)

* Fix amphib marines combat display  (ComradeKev)

* Add name_place.txt for pacific to clean up territory name placement (ComradeKev)

* Add Australian player purchases (units transferred to British control for combined play after buy) (ComradeKev)

* Add Australian capital and territories (ComradeKev)

* Add partial support for Commonwealth Convoy Center cash distribution (ComradeKev)

* Add Naval and Air bases (ComradeKev)

* Add partial support for Kamikazi zones (ComradeKev)

* Fix lhtr strategic bombing (dav eagle2)

* fix [ 2015235 ] Compilation error under OpenJDK (karrde712)

Changes for 1.0.0.3

* allow factories with non 0 movement to move (sgb)

* update great war to 2.2 (Jason Clark)

Changes for 1.0.0.2

* Fix dice click problem, reopen bug [ 1673719 ]  right-click-drag should not deselect unit upon release (sgb)
